--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>Game</title>
+        <script type="module" src="/js/main.js"></script>
     </head>
     <body>
-        <h1>Test</h1>
+        <canvas id="screen" width="640" height="640"></canvas>
     </body>
 </html>
